--- a/user-activities/src/routes/BoardView/styles.scss
+++ b/user-activities/src/routes/BoardView/styles.scss
@@ -32,6 +32,18 @@
       .create-activity {
         color: blue;
       }
+      .activity {
+        border: 1px solid #d0d1d5;
+        padding: 5px;
+        border-radius: 4px;
+        margin-top: 10px;
+        display: block;
+        width: 100%;
+        text-align: left;
+        &:hover {
+          border: 1px solid blue;
+        }
+      }
     }
   }
 }
