--- a/user-activities/src/routes/BoardView/styles.scss
+++ b/user-activities/src/routes/BoardView/styles.scss
@@ -83,6 +83,9 @@
     padding: 5px;
     border-radius: 4px;
     margin: 10px 0;
+    max-height: 300px;
+    width: 300px;
+    overflow: auto;
   }
   .footer button {
     margin-right: 10px;
