editing list; corrected some typos;

--- a/user-activities/src/components/Popup/styles.scss
+++ b/user-activities/src/components/Popup/styles.scss
@@ -12,7 +12,7 @@
     border: 1px solid #d0d1d5;
     border-radius: 4px;
     z-index: 999999;
-    box-shadow: 5px 5px 5px gray;
+    box-shadow: 5px 5px 5px #d0d1d5;
     position: absolute;
     top: 30px;
     margin-bottom: 30px;
