--- a/user-activities/src/routes/BoardView/styles.scss
+++ b/user-activities/src/routes/BoardView/styles.scss
@@ -38,6 +38,7 @@
       margin-left: 10px;
       margin-top: 10px;
       width: 250px;
+      box-shadow: 5px 5px 5px #d0d1d5;
       .container-title {
         position: relative;
         .buttons {
@@ -89,10 +90,10 @@
   }
 }
 #create-list-form {
-  width: 300px;
+  width: 400px;
 }
 #create-activity-form {
-  width: 500px;
+  width: 400px;
   .form-group {
     margin-bottom: 10px;
   }
@@ -104,7 +105,7 @@
     border-radius: 4px;
     margin: 10px 0;
     max-height: 300px;
-    width: 300px;
+    width: 400px;
     overflow: auto;
   }
   .footer button {
@@ -112,7 +113,7 @@
   }
 }
 #delete-list-dialog {
-  width: 300px;
+  width: 400px;
   .list {
     margin: 10px 0;
     border: 1px solid #d0d1d5;
