--- a/user-activities/src/routes/BoardView/styles.scss
+++ b/user-activities/src/routes/BoardView/styles.scss
@@ -96,6 +96,12 @@
   width: 400px;
   .form-group {
     margin-bottom: 10px;
+    select {
+      margin-right: 5px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
 #delete-activity-dialog {
