--- a/user-activities/src/routes/BoardView/styles.scss
+++ b/user-activities/src/routes/BoardView/styles.scss
@@ -132,6 +132,13 @@
     margin-right: 10px;
   }
 }
-#activity-details-popup p {
-  margin-bottom: 10px;
+#details-popup {
+  width: 300px;
+  p {
+    margin-bottom: 10px;
+    &.details {
+      max-height: 300px;
+      overflow: scroll;
+    }
+  }
 }
